kubernetesdata/minikube/nginx/nodeaffinity.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-afffinity-pod

spec:


  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: disktype
              operator: In
              values: 
              - ssd

  containers:
  - name: nginx
    image: nginx
